working on http interceptor and jwt tokens backend check

--- a/TravelPlanner.Web/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/TravelPlanner.Web/ClientApp/app/components/navmenu/navmenu.component.html
@@ -23,11 +23,11 @@
                         Invited Trips
                     </a>
                 </li>
-                <!--<li *ngIf="isLogoutVisible()">
+                <li *ngIf="isLogoutVisible()">
                     <a (click)="logout()">
                         Logout
                     </a>
-                </li>-->
+                </li>
             </ul>
         </div>
     </div>
