--- a/TravelPlanner.Web/ClientApp/app/components/chat/chat.component.html
+++ b/TravelPlanner.Web/ClientApp/app/components/chat/chat.component.html
@@ -1,4 +1,4 @@
-<div style="border: 1px solid gray; height: 200px; width: 200px">
+<div style="border: 1px solid gray; height: 200px; width: 200px; overflow-x: scroll">
     <p>Messages</p>
     <p *ngFor="let msg of messages">{{ msg.text }}</p>
 </div>
