--- a/TravelPlanner.Web/ClientApp/app/css/forms.css
+++ b/TravelPlanner.Web/ClientApp/app/css/forms.css
@@ -1,7 +1,3 @@
-﻿.ng-valid[required], .ng-valid.required  {
-    border-left: 5px solid #42A948;
-}
-
-.ng-invalid:not(form)  {
-    border-left: 5px solid #a94442;
+﻿input.ng-invalid.ng-touched{
+  border-bottom: 1px solid #e74c3c !important; 
 }
