--- a/TravelPlanner.Web/Views/Shared/_Layout.cshtml
+++ b/TravelPlanner.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Travel Planner</title>
     <base href="/" />
     <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/dist/bundle.css" />
 </head>
 <body>
 @RenderBody()
