--- a/TravelPlanner.Web/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/TravelPlanner.Web/ClientApp/app/components/navmenu/navmenu.component.html
@@ -22,6 +22,9 @@
                 <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/invitedtrips']">{{ 'invitedTripsPageTitle' | translate }}</a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/maptest']">MapTest</a>
+                </li>
                 <li *ngIf="isLoggedIn()">
                     <a (click)="logout()">
                         {{ 'logout' | translate }}
