--- a/TravelPlanner.Web/ClientApp/app/components/map/map.component.html
+++ b/TravelPlanner.Web/ClientApp/app/components/map/map.component.html
@@ -23,6 +23,6 @@
             </agm-info-window>
 
         </agm-marker>
-        <map-directions (onDirectionsDone)="onDirectionsDone($event)"></map-directions>
+        <map-directions></map-directions>
     </agm-map>
 </div>
