some work on edit trip

--- a/TravelPlanner.Web/ClientApp/app/components/map/map.component.html
+++ b/TravelPlanner.Web/ClientApp/app/components/map/map.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h1>Map</h1>
     
-    <div *ngIf="!isReadOnlyMode">
+    <div [ngClass]="{'hidden': isReadOnlyMode}">
         
         <div class="form-group">
             <input placeholder="search for location" autocorrect="off" autocapitalize="off" type="text" class="form-control" #search>
