--- a/TravelPlanner.Web/ClientApp/app/components/app/app.component.css
+++ b/TravelPlanner.Web/ClientApp/app/components/app/app.component.css
@@ -1,6 +1,13 @@
-@media (max-width: 767px) {
-    /* On small screens, the nav menu spans the full width of the screen. Leave a space for it. */
-    .body-content {
-        padding-top: 50px;
-    }
+.body-content {
+    margin-top: 50px;
 }
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
+input.ng-invalid.ng-touched {
+    border-color: #d9534f;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
