--- a/TravelPlanner.Web/Views/Shared/_Layout.cshtml
+++ b/TravelPlanner.Web/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <base href="/" />
     <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/dist/bundle.css" />
+    <link rel="stylesheet" href="~/dist/bootstrap-theme.css" />
 </head>
 <body>
 @RenderBody()
