--- a/TravelPlanner.Web/ClientApp/app/components/map/map.component.html
+++ b/TravelPlanner.Web/ClientApp/app/components/map/map.component.html
@@ -1,36 +1,37 @@
-<div class="container">
-    <h1>Map</h1>
-    
-    <div [ngClass]="{'hidden': isReadOnlyMode}">
-        
-        <div class="form-group">
-            <input placeholder="search for location" autocorrect="off" autocapitalize="off" type="text" class="form-control" #search>
-        </div>
-        <div *ngFor="let waypoint of waypoints; let i = index;">
-            {{ waypoint.name }}
-            <a class="glyphicon glyphicon-edit" href="javascript: " (click)="updateWaypoint(waypoint, i)"></a>
-            <a class="glyphicon glyphicon-remove" href="javascript: " (click)="removeWaypoint(waypoint, i)"></a>
-        </div>
-        <div>
-            <button (click)="getDirections()">Get Directions</button>
-        </div>
-        <div>
-            <button (click)="clearDirections()">Clear Directions</button>
-        </div>
-
+<div class="row" [ngClass]="{'hidden': isReadOnlyMode}">
+    <div class="col-md-4">
+        <input placeholder="search for location" autocorrect="off" autocapitalize="off" type="text" class="form-control" #search>
     </div>
+    <div class="col-md-2">
+        <button class="btn btn-success" (click)="getDirections()">Get Directions</button>
+    </div>
+    <div class="col-md-2">
+        <button class="btn btn-danger" (click)="clearDirections()">Clear Directions</button>
+    </div>
+</div>
 
-    <agm-map [latitude]="lat" [longitude]="lng" [scrollwheel]="true" [zoom]="zoom">
-        <agm-marker 
-            *ngFor="let m of markers; let i = index"
-            (markerClick)="addWaypoint(m, infoWindow)"
-            [latitude]="m.latLng.lat"
-            [longitude]="m.latLng.lng">
+<div style="margin-top: 5px" class="row" *ngFor="let waypoint of waypoints; let i = index;">
+    <div class="col-md-12">
+    {{ waypoint.name }}
+        <a class="glyphicon glyphicon-edit" href="javascript: " (click)="updateWaypoint(waypoint, i)"></a>
+        <a class="glyphicon glyphicon-remove" href="javascript: " (click)="removeWaypoint(waypoint, i)"></a>
+    </div>
+</div>
 
-            <agm-info-window #infoWindow>
-                <strong>{{ m.label }}</strong>
-            </agm-info-window>
+<div style="margin-top: 15px; margin-bottom: 20px" class="row">
+    <div class="col-md-12">
+        <agm-map [latitude]="lat" [longitude]="lng" [scrollwheel]="true" [zoom]="zoom">
+            <agm-marker 
+                *ngFor="let m of markers; let i = index"
+                (markerClick)="addWaypoint(m, infoWindow)"
+                [latitude]="m.latLng.lat"
+                [longitude]="m.latLng.lng">
 
-        </agm-marker>
-    </agm-map>
+                <agm-info-window #infoWindow>
+                    <strong>{{ m.label }}</strong>
+                </agm-info-window>
+
+            </agm-marker>
+        </agm-map>
+    </div>
 </div>
