--- a/TravelPlanner.Web/ClientApp/app/components/map/map.component.html
+++ b/TravelPlanner.Web/ClientApp/app/components/map/map.component.html
@@ -1,3 +1,7 @@
+<div class="page-header">
+    <h2 localize="tripMapTabTitle"></h2>
+</div>
+
 <div class="row" [ngClass]="{'hidden': isReadOnlyMode}">
     <div class="col-md-4">
         <input placeholder="search for location" autocorrect="off" autocapitalize="off" type="text" class="form-control" #search>
