--- a/TravelPlanner.Web/ClientApp/app/components/tripparticipants/tripparticipants.component.html
+++ b/TravelPlanner.Web/ClientApp/app/components/tripparticipants/tripparticipants.component.html
@@ -1,30 +1,28 @@
-<div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4"></div>
-    <div class="col-md-4"></div>
+<div class="page-header">
+    <h2 localize="tripParticipantsTabTitle"></h2>
 </div>
 
+<div class="row">
+    <div class="col-md-12">
+        <div class="input-group">
+            <input class="form-control" type="text" localize="enterInvitePhone" name="newPhone" [(ngModel)]="newPhone" />
+            <span class="input-group-btn">
+                <button class="btn btn-primary" (click)="addInvite()" localize="addInviteButton"></button>
+                <button class="btn btn-success" (click)="sendInvites()" localize="sendInvitesButton"></button>
+            </span>
+        </div>
+    </div>
+</div>
 
-<form class="form-horizontal">
-    <div class="form-group">
-        <input class="form-control" type="text" localize="enterInvitePhone" name="newPhone" [(ngModel)]="newPhone" />
-    </div>
-    <div class="form-group">
-        <button class="btn btn-primary" (click)="addInvite()" localize="addInviteButton"></button>
-    </div>
-    <div class="form-group">
-        <button class="btn btn-success" (click)="sendInvites()" localize="sendInvitesButton"></button>
-    </div>
-</form>
 
 <div *ngIf="invitePhones.length > 0" class="row">
     <div class="col-md-12">
-        <h3 localize="invitesTitle"></h3>
+        <h4 localize="invitesTitle"></h4>
     </div>
 </div>
-<div class="list-group">
-    <a href="javascript: " class="list-group-item" *ngFor="let invite of invitePhones">{{ invite }}</a>
-</div>
+<ul>
+    <li *ngFor="let invite of invitePhones">{{ invite }}</li>
+</ul>
                 
 <div class="row">
     <div class="col-md-12">
