--- a/TravelPlanner.Web/Views/Shared/_Layout.cshtml
+++ b/TravelPlanner.Web/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/dist/bundle.css" />
     <link rel="stylesheet" href="~/dist/bootstrap-theme.css" />
+    <script src="https://use.fontawesome.com/de5c372dcd.js"></script>
 </head>
 <body>
 @RenderBody()
